update text and images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     body {
       margin: 0;
       font-family: "Calibri", sans-serif;
+      line-height: 1.25;
       background: #fdf6f0;
       color: #333;
     }
@@ -101,29 +102,35 @@
 
   <section id="home" class="active">
     <h2>Welcome to Sonia Tarot</h2>
-    <p>Discover honest, intuitive tarot readings that guide you through life’s questions.</p>
+   <p><strong>Interested in tarot but intimidated by deep spirituality?</strong>
+  I approach tarot with kindness and openness. Sonia Tarot is a friendly, safe space to play and experiment. A place to ask questions, explore storytelling, connect with your intuition, and grow your self-awareness at your own pace. Whether you’re curious or ready to dive deeper, I welcome all journeys and celebrate the unique way tarot can inspire us.</p>
+  <p>Discover honest, intuitive tarot readings that guide you through life’s questions.</p>
 
-    <h3>My Reading Style</h3>
+    <h3>My reading style</h3>
     <p>My tarot readings are intuitive, reflective, and down-to-earth. I combine traditional card meanings with storytelling, symbolism, and my own intuitive guidance. Sessions are relaxed and conversational—sometimes deep, sometimes light-hearted—but always rooted in honesty and compassion. The aim is not to predict the future, but to offer clarity, new perspectives, and support your own inner wisdom.</p>
-
-    <h3>What to Expect in My Readings</h3>
+    <h3>What to expect in my readings</h3>
     <p>Each session is a gentle, intuitive space for reflection. I use tarot and oracle cards alongside my intuitive senses to explore your questions or current situation. You can expect a relaxed, informal chat—guided by the cards—with time for your thoughts, emotions, and questions.</p>
     <p>Readings may feel emotional, empowering, or thought-provoking. You don’t need to believe in anything—just bring an open mind. I’ll help you feel safe, seen, and supported as we explore together. The focus is on insight, not prediction—offering a mirror to your own inner wisdom.</p>
-
-    <h3>How Might You Feel in a Reading?</h3>
+    <h3>How might you feel in a reading?</h3>
     <p>Everyone’s experience is different. You might feel calm, emotional, curious, or even surprised. Some people feel seen or relieved, others leave with a sense of clarity or direction.</p>
     <p>It’s also normal to feel a bit nervous—especially if it’s your first time or we’re touching on something close to the heart. You might not know what to expect, and that’s okay. I aim to hold space gently and without judgement, so you can relax, be yourself, and take what resonates.</p>
     <p>However you feel, you’re always in control of the session.</p>
   </section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hi, I’m Sonia.</p>
-    <p>My first memory of tarot dates back to the early 90s. I must have been 11 or 12—I remember my mum using The Egyptian Tarot, reading directly from the book and having fun with her friends. How much I wanted to be part of that too! Tarot captured my imagination then, and I’ve been fascinated ever since.</p>
-    <p>When I was 17, I got my first deck—a Major Arcana only—it was a freebie in a fashion magazine. I kept it and cherish it, but never read with it. It took me a few decades after that before I finally decided I was ready to immerse myself in the world of tarot.</p>
-    <p>Now, tarot is a part of my life. I use it as a tool for personal growth, to unlock my creativity, connect with myself, and meditate (I just love looking at the images… can we call that meditation?!).</p>
-    <p>I love how rich tarot is—the art, the history, the symbolism, and the deep sense of magic that runs through it all. I’m here to share that magic with you, helping you explore your own story and find clarity through the cards. Whether you’re new to tarot or have been on this path for a while, I’d love to support your journey.</p>
-  </section>
+<section id="about">
+  <div style="display: flex; align-items: flex-start; gap: 1rem;">
+    <img src="images/winter.jpeg" alt="Sonia" style="width: 250px; height: auto; border-radius: 8px; flex-shrink: 0;" />
+    <div>
+      <h2>About Me</h2>
+      <p>Hi, I’m Sonia.</p>
+      <p>My first memory of tarot dates back to the early 90s. I must have been 11 or 12—I remember my mum using The Egyptian Tarot, reading directly from the book and having fun with her friends. How much I wanted to be part of that too! Tarot captured my imagination then, and I’ve been fascinated ever since.</p>
+      <p>When I was 17, I got my first deck—a Major Arcana only—it was a freebie in a fashion magazine. I kept it and cherish it, but never read with it. It took me a few decades after that before I finally decided I was ready to immerse myself in the world of tarot.</p>
+      <p>Now, tarot is a part of my life. I use it as a tool for personal growth, to unlock my creativity, connect with myself, and meditate (I just love looking at the images… can we call that meditation?!).</p>
+      <p>I love how rich tarot is—the art, the history, the symbolism, and the deep sense of magic that runs through it all. I’m here to share that magic with you, helping you explore your own story and find clarity through the cards. Whether you’re new to tarot or have been on this path for a while, I’d love to support your journey.</p>
+    </div>
+  </div>
+</section>
+
 
   <section id="reading">
     <h2>Reading Menu</h2>
@@ -145,7 +152,7 @@
     <strong>A:</strong> Typically 20–30 minutes, depending on the reading type.</p>
 
     <p><strong>Q:</strong> Can I get a reading remotely?<br />
-    <strong>A:</strong> Yes, I offer readings by phone or video call.</p>
+    <strong>A:</strong> Yes, I offer readings in person or by video call.</p>
   </section>
 
   <section id="code">
