update text and images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       margin: 0;
       font-family: 'Montserrat', sans-serif;
       background: #f9f9fb;
-      colour: #222;
+      color: #222;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
     }
@@ -33,7 +33,7 @@
     header p {
       font-weight: 500;
       font-size: 1.2em;
-      colour: var(--accent-purple);
+      color: var(--accent-purple);
       margin-top: 0.5em;
     }
     nav {
@@ -47,7 +47,7 @@
     nav button {
       background: transparent;
       border: 2px solid transparent;
-      colour: white;
+      color: #000;r: white;
       font-weight: 700;
       font-size: 1.1em;
       padding: 0.5em 1.2em;
@@ -72,24 +72,24 @@
       display: block;
     }
     h2 {
-      colour: var(--accent-dark);
+      color: var(--accent-dark);
       font-weight: 700;
       font-size: 2.2em;
       margin-bottom: 0.5em;
     }
     h3 {
-      colour: var(--accent-purple);
+      color: var(--accent-purple);
       font-weight: 600;
       margin-top: 1.5em;
     }
     p {
       line-height: 1.6;
       margin-bottom: 1em;
-      colour: #333;
+      color: #333;
     }
     .button {
       background: var(--accent-purple);
-      colour: white;
+      color: white;
       border-radius: 8px;
       padding: 0.85em 1.8em;
       font-weight: 700;
@@ -133,16 +133,16 @@
       background: #eee;
       margin-top: 2em;
       font-size: 0.9em;
-      colour: var(--accent-dark);
+      color: var(--accent-dark);
     }
     footer a {
-      colour: var(--accent-dark);
+      color: var(--accent-dark);
       text-decoration: none;
       margin: 0 0.5em;
       transition: colour 0.3s ease;
     }
     footer a:hover {
-      colour: var(--accent-purple);
+      color: var(--accent-purple)
     }
     @keyframes fadeIn {
       from {
@@ -174,18 +174,19 @@
 
   <section id="home" class="active">
     <h2>Welcome to Sonia Tarot</h2>
-    <p>Interested in tarot but intimidated by deep spirituality?  
+     <div style="display: flex;align-items: center; gap:1em; max-width: 700px; margin: 1em auto;">
+    <img src="images/china.jpeg" alt="Chinita la gata" style="max-width:200px;border-radius: 8px;"/>
+    <p><strong>Interested in tarot but intimidated by deep spirituality? </strong> 
     I approach tarot with kindness and openness. Sonia Tarot is a friendly, safe space to play and experiment. A place to ask questions, explore storytelling, connect with your intuition, and grow your self-awareness at your own pace. Whether you’re curious or ready to dive deeper, I welcome all journeys and celebrate the unique way tarot can inspire us.</p>
-    <p>Discover honest, intuitive tarot readings that guide you through life’s questions.</p>
-
-    <h3>My Reading Style</h3>
+     </div>
+    <h3>My reading style</h3>
     <p>My tarot readings are intuitive, reflective, and down-to-earth. I combine traditional card meanings with storytelling, symbolism, and my own intuitive guidance. Sessions are relaxed and conversational—sometimes deep, sometimes light-hearted—but always rooted in honesty and compassion. The aim is not to predict the future, but to offer clarity, new perspectives, and support your own inner wisdom.</p>
 
-    <h3>What to Expect in My Readings</h3>
+    <h3>What to expect in my readings</h3>
     <p>Each session is a gentle, intuitive space for reflection. I use tarot and oracle cards alongside my intuitive senses to explore your questions or current situation. You can expect a relaxed, informal chat—guided by the cards—with time for your thoughts, emotions, and questions.</p>
     <p>Readings may feel emotional, empowering, or thought-provoking. You don’t need to believe in anything—just bring an open mind. I’ll help you feel safe, seen, and supported as we explore together. The focus is on insight, not prediction—offering a mirror to your own inner wisdom.</p>
 
-    <h3>How Might You Feel in a Reading?</h3>
+    <h3>How might you feel in a reading?</h3>
     <p>Everyone’s experience is different. You might feel calm, emotional, curious, or even surprised. Some people feel seen or relieved, others leave with a sense of clarity or direction.</p>
     <p>It’s also normal to feel a bit nervous—especially if it’s your first time or we’re touching on something close to the heart. You might not know what to expect, and that’s okay. I aim to hold space gently and without judgement, so you can relax, be yourself, and take what resonates.</p>
     <p>However you feel, you’re always in control of the session.</p>
